# markovids

./: CLAUDE.md  pyproject.toml
src/markovids/: __init__.py  cli.py  util.py
src/markovids/depth/: __init__.py  filter.py  io.py  moments.py  plane.py  track.py
src/markovids/pcl/: __init__.py  fluo.py  io.py  kpoints.py  pipeline.py  registration.py  registration_tensor.py  viz.py
src/markovids/vid/: __init__.py  io.py  util.py
