[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markovids"
requires-python = ">=3.7"
version = "0.0.1"
description = "A package for processing 2d and 3d videos"
dependencies = [
	"open3d",
	"opencv-python-headless",
	"numpy",
	"tqdm",
]


# [tool.setuptools.packages.find]
# where = ["src"]


