[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markovids"
requires-python = ">=3.7"
version = "0.0.1"
description = "A package for processing 2d and 3d videos"
dependencies = [
	"opencv-python-headless",
	"numpy",
	"pandas",
	"matplotlib",
	"scikit-image",
	"scipy",
	"tqdm",
]

[project.optional-dependencies]
pcl = [
	"open3d"
]

# [tool.setuptools.packages.find]
# where = ["src"]


[project.scripts]
markovids = "markovids.cli:cli"

